# Quant

./: DISCLAIMER.md  PJME_forecast.py  README.md  What.md  da_rt.py  markowitz_optimization.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_5.py  pyproject.toml
Arithmetic/: tricks.md
Statistics/: BayesianAnomalyDetection.md  BayesianAnomalyDetection.py  ConditinalProb.md  ConditinalProb1.md  HMC.md  HMC.py  LLNvsCLT.md  LLNvsCLT.py  NAV.md  NAV.py  SimulatedAnnealing.md  SimulatedAnnealing.py  VaRCVar.md  VaRCVar.py  beta.md  causality.md  causality.py  confidenceInterval.md  confidenceInterval.py  geometricDist.md  geometricDist.py  jointDist.md  jointDist.py  jointDist1.py  kellyCriterion.py  metropolis_hastings.py  try.py  tvsNormal.md  volume_sphere.md  volume_sphere.py
Statistics/MarkovChains/: Course.md  Simulating a 2-State Market Regime.py
Statistics/Questions/: sixflips.md  sixflips.py
hybrid_energy_optimizer/: README.md  data_generator.py  main.py  model_linopy.py  model_pyomo.py  system_params.py  visualizer.py
hybrid_energy_optimizer/results/: hourly_linopy_det.csv  hourly_linopy_stoch.csv  hourly_pyomo_det.csv  hourly_pyomo_stoch.csv  summary.csv
kelly_fastapi/: KellyPrediction.py  package-lock.json  package.json
kelly_fastapi/app/: routes.py  utils.py
quant-derivatives-lab/src/pricing/: black_scholes.py  monte_carlo.py
quant-training/: README.md
quant-training/core/: plotting.py  probability_utils.py
risk_engine/: README.md  backtest.py  data.py  main.py  portfolio.py  risk.py  strategy.py
(+5 files in other folders)
