[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "polars>=1.39.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.43.0",
    "xgboost>=3.2.0",
]
